src/syntax_analysis/expressions/pratt_parsing/call_expression/tests/snapshots/rust_monkey_interpreter__syntax_analysis__expressions__pratt_parsing__call_expression__tests__test_syntax_analysis_for_call_expression_case2.snap
---
source: src/syntax_analysis/expressions/pratt_parsing/call_expression/tests/mod.rs
expression: "crate::syntax_analysis::get_abstract_syntax_tree(crate::lexical_analysis::get_tokens(code.to_string()))"
---
{
  "abstract_syntax_tree": [
    {
      "EXPRESSION": {
        "expression": {
          "CALL": {
            "function": {
              "IDENTIFIER": {
                "identifier_token": {
                  "IDENTIFIER": {
                    "literal": "add"
                  }
                }
              }
            },
            "arguments": [
              {
                "INTEGER": {
                  "integer_token": {
                    "INTEGER": {
                      "literal": "3"
                    }
                  }
                }
              },
              {
                "INFIX": {
                  "left_hand": {
                    "INTEGER": {
                      "integer_token": {
                        "INTEGER": {
                          "literal": "7"
                        }
                      }
                    }
                  },
                  "operator_token": "MULTIPLY",
                  "right_hand": {
                    "INTEGER": {
                      "integer_token": {
                        "INTEGER": {
                          "literal": "2"
                        }
                      }
                    }
                  }
                }
              }
            ]
          }
        }
      }
    }
  ],
  "syntax_parsing_errors": []
}
